[gd_scene load_steps=6 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://pong_assets/separator.png" type="Texture" id=2]
[ext_resource path="res://pong_assets/ball.png" type="Texture" id=3]
[ext_resource path="res://pong_assets/left_pallete.png" type="Texture" id=4]
[ext_resource path="res://pong_assets/right_pallete.png" type="Texture" id=5]

[node name="world" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="separator" type="Sprite" parent="." index="0"]

position = Vector2( 320, 200 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="ball" type="Sprite" parent="." index="1"]

position = Vector2( 320, 200 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="leftPlayer" type="Sprite" parent="." index="2"]

position = Vector2( 40, 200 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="rightPlayer" type="Sprite" parent="." index="3"]

position = Vector2( 600, 200 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="leftScore" type="RichTextLabel" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 18.0
margin_right = 58.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="rightScore" type="RichTextLabel" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 596.0
margin_top = 18.0
margin_right = 636.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false


